<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.gigamind.cognify.ui.home.HomeFragment"
        android:label="@string/home" />

    <fragment
        android:id="@+id/navigation_leaderboard"
        android:name="com.gigamind.cognify.ui.leaderboard.LeaderboardFragment"
        android:label="@string/leaderboard" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.dailybraingame.ui.profile.ProfileFragment"
        android:label="@string/profile" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.gigamind.cognify.ui.settings.SettingsFragment"
        android:label="@string/settings" />

</navigation> 